--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campus Life Planner</title>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -370,6 +370,6 @@
 
     <div role="status" aria-live="assertive" aria-atomic="true" class="sr-only" id="alert-region"></div>
 
-    <script type="module" src="/scripts/main.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
