Fixed the errors in tests.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campus Life Planner</title>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -344,6 +344,9 @@
             </dl>
 
             <h3>Contact</h3>
+            <div class="profile">
+                <img src="./assets/pic.jpg" alt="">
+            </div>
             <p>
               Created by: Dianah Shimwa Gasasira<br>
               Email: <a href="d.shimwa@alustudent.com">d.shimwa@alustudent.com</a><br>
