CSS of contact image and html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <header>
       <div class="container">
-        <h1>Campus Life Planner</h1>
-        <p class="subtitle">Organize your tasks, events, and campus activities</p>
+        <h1>EduTrackr</h1>
+        <p class="subtitle">Slay your semester, stress-free</p>
       </div>
     </header>
 
@@ -293,24 +292,22 @@
         </section>
 
         <section id="page-about" class="page" aria-labelledby="about-heading">
-          <h2 id="about-heading">About Campus Life Planner</h2>
+          <h2 id="about-heading">About EduTrackr</h2>
 
           <div class="about-content">
             <p>
-              Campus Life Planner is a comprehensive task and event management tool designed
-              for students to organize their academic and extracurricular activities effectively.
+              EduTrackr is your ultimate campus life planner designed to help students stay focused, organized and in control through our their semester, without stress.
             </p>
 
             <h3>Features</h3>
             <ul>
-              <li>Track tasks with due dates, durations, and tags</li>
+              <li>Organize classes and tasks, track assignments, and set reminders.</li>
               <li>Powerful regex search functionality</li>
               <li>Sort and filter your tasks</li>
-              <li>Visual dashboard with statistics</li>
+              <li>Dashboard with Statistics presented on graphs</li>
               <li>Weekly time cap monitoring</li>
-              <li>Import/export your data</li>
+              <li>Import and export your data</li>
               <li>Fully accessible and keyboard-navigable</li>
-              <li>Responsive design for mobile and desktop</li>
             </ul>
 
             <h3>Keyboard Shortcuts</h3>
@@ -353,11 +350,9 @@
               GitHub: <a href="https://github.com/dianahshimwa" target="_blank" rel="noopener noreferrer">github.com/dianahshimwa</a>
             </p>
 
-            <h3>Accessibility</h3>
+            <h3>Mission Focused</h3>
             <p>
-              This application is built with accessibility in mind, featuring semantic HTML,
-              ARIA landmarks and live regions, keyboard navigation support, and proper color contrast.
-              If you encounter any accessibility issues, please contact us.
+              Designed for All: Success should be for everyone. Please contact us.
             </p>
           </div>
         </section>
@@ -367,7 +362,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2025 Campus Life Planner. Built for students, by students.</p>
+        <p>&copy; 2025 EduTrackr. Built for students, by a student.</p>
       </div>
     </footer>
 
