--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
-
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Campus Life Planner</title>
+    <title>EduTrackr</title>
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-
     <header>
       <div class="container">
         <h1>EduTrackr</h1>
         <p class="subtitle">Slay your semester, stress-free</p>
       </div>
     </header>
-
     <nav aria-label="Main navigation">
       <div class="container">
         <ul class="nav-list">
@@ -28,13 +25,10 @@
         </ul>
       </div>
     </nav>
-
     <main id="main-content">
       <div class="container">
-
         <section id="page-dashboard" class="page active" aria-labelledby="dashboard-heading">
           <h2 id="dashboard-heading">Dashboard</h2>
-
           <div class="stats-grid">
             <div class="stat-card">
               <h3>Total Tasks</h3>
@@ -53,7 +47,6 @@
               <p class="stat-value" id="stat-recent">0</p>
             </div>
           </div>
-
           <div class="cap-section">
             <h3>Weekly Time Cap</h3>
             <div class="cap-bar-container">
@@ -64,16 +57,13 @@
             </p>
             <div role="status" aria-live="polite" aria-atomic="true" class="cap-message" id="cap-message"></div>
           </div>
-
           <div class="chart-container">
             <h3>Recent Activity</h3>
             <div class="simple-chart" id="activity-chart"></div>
           </div>
         </section>
-
         <section id="page-tasks" class="page" aria-labelledby="tasks-heading">
           <h2 id="tasks-heading">All Tasks</h2>
-
           <div class="search-controls">
             <div class="search-box">
               <label for="search-input">Search (Regex)</label>
@@ -92,7 +82,6 @@
               <div role="status" aria-live="polite" class="search-status" id="search-status"></div>
               <p id="search-help" class="help-text">Use regex patterns to search. Examples: ^@homework, \d{2}:\d{2}, (study|review)</p>
             </div>
-
             <div class="sort-controls">
               <label for="sort-select">Sort by</label>
               <select id="sort-select">
@@ -105,7 +94,6 @@
               </select>
             </div>
           </div>
-
           <div class="table-container">
             <table id="tasks-table" class="tasks-table">
               <thead>
@@ -124,16 +112,12 @@
               </tbody>
             </table>
           </div>
-
           <div class="mobile-cards" id="mobile-cards"></div>
         </section>
-
         <section id="page-add" class="page" aria-labelledby="add-heading">
           <h2 id="add-heading">Add Task</h2>
-
           <form id="task-form" class="task-form" novalidate>
             <input type="hidden" id="task-id" />
-
             <div class="form-group">
               <label for="task-title">
                 Title <span class="required">*</span>
@@ -148,7 +132,6 @@
               <p id="title-help" class="help-text">No leading/trailing spaces, no double spaces</p>
               <div role="alert" class="error-message" id="title-error"></div>
             </div>
-
             <div class="form-group">
               <label for="task-date">
                 Due Date <span class="required">*</span>
@@ -164,7 +147,6 @@
               <p id="date-help" class="help-text">Format: YYYY-MM-DD (e.g., 2025-10-15)</p>
               <div role="alert" class="error-message" id="date-error"></div>
             </div>
-
             <div class="form-group">
               <label for="task-duration">
                 Duration (minutes) <span class="required">*</span>
@@ -180,7 +162,6 @@
               <p id="duration-help" class="help-text">Whole number or decimal (e.g., 90 or 90.5)</p>
               <div role="alert" class="error-message" id="duration-error"></div>
             </div>
-
             <div class="form-group">
               <label for="task-tag">
                 Tag <span class="required">*</span>
@@ -207,7 +188,6 @@
               <p id="tag-help" class="help-text">Letters, spaces, and hyphens only (e.g., homework, group-project)</p>
               <div role="alert" class="error-message" id="tag-error"></div>
             </div>
-
             <div class="form-group">
               <label for="task-notes">
                 Notes (optional)
@@ -219,21 +199,17 @@
               ></textarea>
               <p id="notes-help" class="help-text">Additional details about the task</p>
             </div>
-
             <div class="form-actions">
               <button type="submit" class="btn btn-primary">
                 <span id="form-submit-text">Add Task</span>
               </button>
               <button type="button" class="btn btn-secondary" id="cancel-edit">Cancel</button>
             </div>
-
             <div role="status" aria-live="polite" class="form-status" id="form-status"></div>
           </form>
         </section>
-
         <section id="page-settings" class="page" aria-labelledby="settings-heading">
           <h2 id="settings-heading">Settings</h2>
-
           <div class="settings-section">
             <h3>Time Units</h3>
             <div class="form-group">
@@ -243,7 +219,6 @@
                 <option value="hours">Hours</option>
               </select>
             </div>
-
             <div class="form-group">
               <label for="weekly-cap">Weekly time cap (hours)</label>
               <input
@@ -256,7 +231,6 @@
               <p class="help-text">Set your weekly time budget goal (1-168 hours)</p>
             </div>
           </div>
-
           <div class="settings-section">
             <h3>Data Management</h3>
             <div class="data-actions">
@@ -280,7 +254,6 @@
             </div>
             <div role="status" aria-live="polite" class="settings-status" id="settings-status"></div>
           </div>
-
           <div class="settings-section">
             <h3>Appearance</h3>
             <div class="form-group">
@@ -291,15 +264,12 @@
             </div>
           </div>
         </section>
-
         <section id="page-about" class="page" aria-labelledby="about-heading">
           <h2 id="about-heading">About EduTrackr</h2>
-
           <div class="about-content">
             <p>
               EduTrackr is your ultimate campus life planner designed to help students stay focused, organized and in control through our their semester, without stress.
             </p>
-
             <h3>Features</h3>
             <ul>
               <li>Organize classes and tasks, track assignments, and set reminders.</li>
@@ -310,37 +280,28 @@
               <li>Import and export your data</li>
               <li>Fully accessible and keyboard-navigable</li>
             </ul>
-
             <h3>Keyboard Shortcuts</h3>
             <dl class="keyboard-map">
               <dt>Tab / Shift+Tab</dt>
               <dd>Navigate between elements</dd>
-
               <dt>Enter / Space</dt>
               <dd>Activate buttons and links</dd>
-
               <dt>Escape</dt>
               <dd>Cancel edit mode</dd>
             </dl>
-
             <h3>Regex Search Examples</h3>
             <dl class="regex-examples">
               <dt><code>^@homework</code></dt>
               <dd>Tasks starting with @homework</dd>
-
               <dt><code>study|review</code></dt>
               <dd>Tasks containing "study" OR "review"</dd>
-
               <dt><code>\d{2}:\d{2}</code></dt>
               <dd>Tasks with time patterns (e.g., 14:30)</dd>
-
               <dt><code>\b(\w+)\s+\1\b</code></dt>
               <dd>Detect duplicate words (advanced back-reference)</dd>
-
               <dt><code>(?=.*exam)(?=.*math)</code></dt>
               <dd>Tasks containing both "exam" AND "math" (lookahead)</dd>
             </dl>
-
             <h3>Contact</h3>
             <div class="profile">
                 <img src="./assets/pic.jpg" alt="">
@@ -350,25 +311,20 @@
               Email: <a href="d.shimwa@alustudent.com">d.shimwa@alustudent.com</a><br>
               GitHub: <a href="https://github.com/dianahshimwa" target="_blank" rel="noopener noreferrer">github.com/dianahshimwa</a>
             </p>
-
             <h3>Mission Focused</h3>
             <p>
               Designed for All: Success should be for everyone. Please contact us.
             </p>
           </div>
         </section>
-
       </div>
     </main>
-
     <footer>
       <div class="container">
         <p>&copy; 2025 EduTrackr. Built for students, by a student.</p>
       </div>
     </footer>
-
     <div role="status" aria-live="assertive" aria-atomic="true" class="sr-only" id="alert-region"></div>
-
     <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
