Changed project name

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduTrackr</title>
+    <title>EduTra</title>
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <header>
       <div class="container">
-        <h1>EduTrackr</h1>
+        <h1>EduTra</h1>
         <p class="subtitle">Slay your semester, stress-free</p>
       </div>
     </header>
@@ -268,7 +268,7 @@
           <h2 id="about-heading">About EduTrackr</h2>
           <div class="about-content">
             <p>
-              EduTrackr is your ultimate campus life planner designed to help students stay focused, organized and in control through our their semester, without stress.
+              EduTra is your ultimate campus life planner designed to help students stay focused, organized and in control through our their semester, without stress.
             </p>
             <h3>Features</h3>
             <ul>
@@ -321,7 +321,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2025 EduTrackr. Built for students, by a student.</p>
+        <p>&copy; 2025 EduTra. Built for students, by a student.</p>
       </div>
     </footer>
     <div role="status" aria-live="assertive" aria-atomic="true" class="sr-only" id="alert-region"></div>
