Changed name again for deploy

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduTra</title>
+    <title>TrackrEdu</title>
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <header>
       <div class="container">
-        <h1>EduTra</h1>
+        <h1>TrackrEdu</h1>
         <p class="subtitle">Slay your semester, stress-free</p>
       </div>
     </header>
@@ -268,7 +268,7 @@
           <h2 id="about-heading">About EduTrackr</h2>
           <div class="about-content">
             <p>
-              EduTra is your ultimate campus life planner designed to help students stay focused, organized and in control through our their semester, without stress.
+              TrackrEdu is your ultimate campus life planner designed to help students stay focused, organized and in control through our their semester, without stress.
             </p>
             <h3>Features</h3>
             <ul>
