--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2025 EduTra. Built for students, by a student.</p>
+        <p>&copy; 2025 TrackrEdu. Built for students, by a student.</p>
       </div>
     </footer>
     <div role="status" aria-live="assertive" aria-atomic="true" class="sr-only" id="alert-region"></div>
