--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           </div>
         </section>
         <section id="page-about" class="page" aria-labelledby="about-heading">
-          <h2 id="about-heading">About EduTrackr</h2>
+          <h2 id="about-heading">About TrackrEdu</h2>
           <div class="about-content">
             <p>
               TrackrEdu is your ultimate campus life planner designed to help students stay focused, organized and in control through our their semester, without stress.
